--- a/src/app/views/features/quote/quote.component.html
+++ b/src/app/views/features/quote/quote.component.html
@@ -99,7 +99,7 @@
         <div class="field">
           <label><span class="required-star">*</span>名稱</label>
           <input pInputText formControlName="name"
-            [ngClass]="{'ng-dirty':quote_form.controls['name'].hasError && quote_form.controls['name'].touched}">
+            [ngClass]="{'ng-dirty':quote_form.controls['name'].hasError('required') && quote_form.controls['name'].touched}">
         </div>
       </div>
       <div class="col-6">
@@ -107,7 +107,7 @@
           <label><span class="required-star">*</span>商機</label>
           <p-dropdown placeholder="搜尋商機" [options]="GetAllOpportunity" [formControlName]="'opportunity_id'" [(ngModel)]="selectedOpportunity_id"
                 [filter]="true"  filterBy="label" [showClear]="true" (ngModelChange)="selectedOpportunity()"
-                      [ngClass]="{'ng-dirty':quote_form.controls['opportunity_id'].hasError && quote_form.controls['opportunity_id'].touched}"></p-dropdown>
+                      [ngClass]="{'ng-dirty':quote_form.controls['opportunity_id'].hasError('required') && quote_form.controls['opportunity_id'].touched}"></p-dropdown>
         </div>
       </div>
       <div class="col-6" *ngIf="showedit">
