--- a/src/app/views/features/campaign/campaign.component.html
+++ b/src/app/views/features/campaign/campaign.component.html
@@ -211,10 +211,12 @@
       <ng-container *ngIf="!showedit">
         <p-button label="新增" (click)="postCampaignRequest()" styleClass="p-button-outlined p-button-info"></p-button>
       </ng-container>
-      <ng-container *ngIf="showedit">
-        <p-button label="儲存" (click)="patchCampaignRequest(c_id)"  styleClass="p-button-outlined p-button-info"></p-button>
+      <ng-container *ngIf="!disableSaveButton">
+        <ng-container *ngIf="showedit">
+          <p-button label="儲存" (click)="patchCampaignRequest(c_id)"  [disabled]="disableSaveButton"  styleClass="p-button-outlined p-button-info"></p-button>
+        </ng-container>
+        <p-button label="取消" (click)="showAlertCancel()" styleClass="p-button-secondary ml-2"></p-button>
       </ng-container>
-      <p-button label="取消" (click)="showAlertCancel()" styleClass="p-button-secondary ml-2"></p-button>
     </div>
   </p-dialog>
 </form>
