--- a/src/app/views/features/campaign/view-campaign/view-campaign.component.html
+++ b/src/app/views/features/campaign/view-campaign/view-campaign.component.html
@@ -296,7 +296,7 @@
                   </div>
                 </div>
               </div>
-              <div class="flex justify-content-end">
+              <div class="flex justify-content-end" *ngIf="GetOneCampaign.status!=='已終止'">
                 <p-button label="儲存" (click)="patchCampaignRequest(c_id)"
                           styleClass="p-button-outlined p-button-info"></p-button>
                 <p-button label="取消" (click)="showAlertCancel()" styleClass="p-button-secondary ml-2"></p-button>
