--- a/src/app/views/features/campaign/view-campaign/view-campaign.component.html
+++ b/src/app/views/features/campaign/view-campaign/view-campaign.component.html
@@ -18,11 +18,11 @@
           <div class="grid mt-2">
             <div class="col-12 flex justify-content-center">
               <label>類型: </label>
-              <label>{{GetOneCampaign.status}}</label>
+              <label>{{stage}}</label>
             </div>
             <div class="col-12 flex justify-content-center">
               <label>狀態: </label>
-              <label>{{GetOneCampaign.type}}</label>
+              <label>{{campaign_form.controls['type'].value.name}}</label>
             </div>
             <div class="col-12 flex justify-content-center">
               <label>開始日期: </label>
@@ -296,7 +296,7 @@
                   </div>
                 </div>
               </div>
-              <div class="flex justify-content-end" *ngIf="GetOneCampaign.status!=='已終止'">
+              <div class="flex justify-content-end" *ngIf="stage!=='已終止'">
                 <p-button label="儲存" (click)="patchCampaignRequest(c_id)"
                           styleClass="p-button-outlined p-button-info"></p-button>
                 <p-button label="取消" (click)="showAlertCancel()" styleClass="p-button-secondary ml-2"></p-button>
