--- a/src/app/views/features/campaign/campaign.component.html
+++ b/src/app/views/features/campaign/campaign.component.html
@@ -40,7 +40,7 @@
             <th pSortableColumn="start_date">開始時間<p-sortIcon field="start_date"></p-sortIcon></th>
             <th pSortableColumn="end_date">結束時間<p-sortIcon field="end_date"></p-sortIcon></th>
              <th pSortableColumn="salesperson_name">業務員<p-sortIcon field="salesperson_name"></p-sortIcon></th>
-            <th pSortableColumn="member">成員已回應<p-sortIcon field="member"></p-sortIcon></th>
+<!--            <th pSortableColumn="member">成員已回應<p-sortIcon field="member"></p-sortIcon></th>-->
             <th></th>
           </tr>
         </ng-template>
